<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/startChallenge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/startChallenge"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/modifyChallenge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/modifyChallenge"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/validateChallenge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/validateChallenge"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/deleteChallenge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/deleteChallenge"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        />


</LinearLayout>