<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.challenges.pierreg.challengesapp.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/fab_margin">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <TextView
                android:text="@string/newChallenge"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textNewChallenge"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/challengeName"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textMainName"
                android:layout_below="@id/textNewChallenge"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintChallengeName"
                android:maxLines="1"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/editMainName"
                android:layout_below="@+id/textMainName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/challengeFrequency"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textFrequency"
                android:layout_below="@id/editMainName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <RadioGroup
                android:id="@+id/radioFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:orientation="horizontal"
                android:layout_below="@+id/textFrequency">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/daily"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weekly"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monthly"/>
            </RadioGroup>

            <TextView
                android:text="@string/challengeFrequency"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textChallenges"
                android:layout_below="@+id/radioFrequency"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:id="@+id/layoutEveryDay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textChallenges"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonValidation"
                android:text="Validate"
                android:onClick="validateChallenge"
                android:layout_below="@+id/layoutEveryDay"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/actionFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_black_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/validateActionFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_check_black_24dp" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
